# L5P-Keyboard-RGB-LOQ-15IRX10-Support

./: check_device.rs
app/src/: cli.rs
app/src/gui/: mod.rs  modals.rs
app/src/manager/: mod.rs  profile.rs
app/src/manager/effects/: default_ui.rs  mod.rs
driver/: Cargo.toml
driver/src/: lib.rs
